--- a/src/app/components/journalentries/journalentries.component.css
+++ b/src/app/components/journalentries/journalentries.component.css
@@ -44,6 +44,9 @@
     box-shadow: 0px 8px 8px 8px rgba(0,0,0,0.2);
     z-index: 1;
     font-family: monospace;
+    max-height: 50%;
+    overflow-y: scroll;
+    overflow-x: hidden;
   }
   
   .dropdown-content .topic {
@@ -133,22 +136,6 @@
 
 #deleteJournalBtn {
   bottom: 0px;
-}
-
-.journalCRUDBtn {
-  width: 58px;
-  height: 3em;
-  font-family: monospace;
-  background-color:  #57CC99;
-  color: white;
-  border-radius: 3px;
-  border-color: white;
-  margin-right: 2px;
-  text-align:center;
-}
-
-.journalCRUDBtn:hover {
-  border-color: black;
 }
 
 /*
