--- a/src/app/components/figures/figures.component.css
+++ b/src/app/components/figures/figures.component.css
@@ -14,6 +14,7 @@
   overflow-x: hidden;
 }
 
+
 .figure {
   width: 173px;
   border-width: 1px;
@@ -44,7 +45,7 @@
   font-family: monospace;
   background-color:  #57CC99;
   color: white;
-  border-radius: 3px;
+  border-radius: 10px;
   border-color: white;
 }
 
@@ -58,8 +59,12 @@
   font-family: monospace;
   background-color:  #57CC99;
   color: white;
-  border-radius: 3px;
+  border-radius: 10px;
   border-color: white;
+}
+
+.enabledUploadFigurebutton:hover {
+  border-color: black;
 }
 
 .disabledUploadFigureButton {
@@ -69,7 +74,7 @@
   background-color: #DDF4EA;
   font-weight: bold;
   color: black;
-  border-radius: 3px;
+  border-radius: 10px;
   border-color: white;
 }
 
@@ -86,6 +91,20 @@
   color: white;
   border-radius: 3px;
   border-color: white;
+}
+
+#chooseFileBtn {
+  width: 150px;
+  height: 3em;
+  font-family: monospace;
+  background-color:  #57CC99;
+  color: white;
+  border-radius: 8px;
+  border-color: white;
+}
+
+#chooseFileBtn:hover {
+  border-color: black;
 }
 
 .icon {
@@ -111,6 +130,21 @@
   text-align: center;   /* clip the excess when child gets bigger than parent */
 }
 
+.figureModalBtn {
+  width: 5em;
+  height: 3em;
+  font-family: monospace;
+  background-color:  #57CC99;
+  color: white;
+  border-radius: 8px;
+  border-color: white;
+}
+
+
+.figureModalBtn:hover {
+  border-color: black;
+}
+
 #imageFigureContainer img {
   display: block;
   transition: transform .4s;   /* smoother zoom */
@@ -129,6 +163,61 @@
   width: 100%;
 }
 
+#excelFigure {
+  margin: auto;
+  align-items: left;
+  table-layout: fixed;
+  overflow-x: scroll;
+  overflow-y: scroll;
+  border-collapse: collapse;
+  display: table;
+  position: relative;
+}
+
+#excelFigure td {
+  border: 1px solid;
+  width: 1%;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#excelFigure tbody {
+  display: block; /* to enable vertical scrolling */
+  height: 600px; /* e.g. */
+  width: 1000px;
+  overflow-y: scroll;  
+  overflow-x: scroll;  
+}
+
+.activeExcelTab {
+  background-color: #57CC99;
+}
+
+.excelSheetBtn {
+  width: 150px;
+  min-height: 2em;
+  font-family: monospace;
+  background-color: #DDF4EA ;
+  border-radius: 3px;
+  border-color: white;
+  float: left;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 3px;
+
+}
+
+.excelSheetBtn.activeExcelTab {
+  background-color:#57CC99;
+  color: white;
+  border: 2px solid black;
+}
+
+#excelFigure > tbody > tr:first-child > td{
+  font-weight:bold;
+}
+
 :host ::ng-deep #pdfViewer .page .canvasWrapper {
   border: 3px solid #ccc;
   border-radius: 3px;
@@ -142,6 +231,7 @@
 .pdfSizeChangeBtn {
   padding-right: 1em;
 }
+
 /*
 SCROLL OVERFLOW CSS
 */
