--- a/src/app/components/journalentries/journalentries.component.html
+++ b/src/app/components/journalentries/journalentries.component.html
@@ -11,9 +11,9 @@
                     Add Workbook
                 </span>
                 <ng-template #showTopics>
-                    <div>
-                        <i class="fa fa-caret-down"></i>
-                        <span style="margin-left: 0em;"> {{currentTopic.topicName}}</span>
+                    <div style="width: 7em; overflow-x: hidden; text-overflow: ellipsis; text-align: left;">
+                        <i class="fa fa-caret-down" style="text-align: left;"></i>
+                        <span style="margin-left: 0em; font-size: 28px;"> {{currentTopic.topicName}}</span>
                     </div>
                 </ng-template>
             </button>
